@@ -1,3 +1,7 @@
+2012-12-10  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* mingw32.c: Remove look_for_cmd().
+
 2012-12-10  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* win32lib.c: remove look_for_cmd().
